--- a/application.yaml
+++ b/application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: notepad-argocd-app
-  namespace: argo-cd
+  namespace: argocd-demo
 spec:
   project: default
 
