--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: pbaloriya/notepad-app:v1.1
+        image: pbaloriya/notepad-app:latest
         ports:
         - containerPort: 8080
