--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
       - name: myapp
         image: pbaloriya/notepad-app:latest
+        command: ["python", "/app/backend/manage.py", "runserver", "0.0.0.0:8008"]
         ports:
-        - containerPort: 8080
+        - containerPort: 8008
